--- a/client/head.html
+++ b/client/head.html
@@ -1,4 +1,4 @@
 <head>
-  <title>Meteor Leaflet Demo</title>
+  <title>Interactive map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
