--- a/client/head.html
+++ b/client/head.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Interactive map</title>
+    <title>Drukte en prullenbakken</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="shortcut icon" href="/favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
