--- a/client/head.html
+++ b/client/head.html
@@ -23,6 +23,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
+    <link rel="mask-icon" href="icons/favicon.svg" color="red">
     <meta name="msapplication-TileColor" content="#F80B0B">
     <meta name="msapplication-TileImage" content="/favicon-144.png">
     <meta name="msapplication-config" content="/browserconfig.xml">
