--- a/client/head.html
+++ b/client/head.html
@@ -23,8 +23,8 @@
     <link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
-    <link rel="mask-icon" href="icons/favicon.svg" color="red">
-    <meta name="msapplication-TileColor" content="#F80B0B">
+    <link rel="mask-icon" href="favicon.svg" color="#DC3C3F">
+    <meta name="msapplication-TileColor" content="#DC3C3F">
     <meta name="msapplication-TileImage" content="/favicon-144.png">
     <meta name="msapplication-config" content="/browserconfig.xml">
 </head>
